welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: not found: value z
if (z=0) {
    ^Poucet:3: error: not found: value z
	z=1;
        ^